--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 16
           cache: 'npm'
       - name: Docker compose
-        run: docker-compose up -d
+        run: docker-compose up -d --wait
       - name: Install npm dependencies
         run: npm ci
       - name: Build code
