--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -16,18 +16,8 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-      - name: Check Docker Version
-        run: docker --version
-      - name: Install Latest Docker
-        run: |
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-          sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
-          sudo apt-get update
-          sudo apt-get install docker-ce
-      - name: Check Docker Version
-        run: docker --version
       - name: Docker compose
-        run: docker-compose up --wait
+        run: docker-compose up -d --build
       - name: Install npm dependencies
         run: npm ci
       - name: Build code
