update npm ignore clean index.ts update readme

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,14 @@
 .github
+.neo4j
+coverage
 test
 # source
 lib
 index.ts
 package-lock.json
 .eslintrc.js
+.gitignore
+docker-compose
 tsconfig.json
 tsconfig.build.json
 .prettierrc
