--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nhogs/nestjs-neo4j",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "node": ">=16.x"
   },
@@ -54,8 +54,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "neo4j-driver": "^4.4.5",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0 || ^7.0.0"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
