--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,6 @@
 {
   "extends": "./tsconfig.json",
   "include": ["lib/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "exclude": ["node_modules", "dist",
+    "spec", "**/*spec.ts"]
 }
