--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nhogs/nestjs-neo4j",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "engines": {
     "node": ">=16.x"
   },
@@ -27,16 +27,16 @@
   },
   "homepage": "https://github.com/Nhogs/nestjs-neo4j#readme",
   "devDependencies": {
-    "@nestjs/common": "^8.4.7",
-    "@nestjs/config": "^2.1.0",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/platform-express": "^8.4.7",
-    "@nestjs/testing": "^8.4.7",
-    "@types/jest": "^28.1.4",
+    "@nestjs/common": "^9.0.3",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.3",
+    "@nestjs/platform-express": "^9.0.3",
+    "@nestjs/testing": "^9.0.3",
+    "@types/jest": "^28.1.5",
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "axios": "^0.27.2",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
@@ -44,7 +44,7 @@
     "jest": "^28.1.2",
     "neo4j-driver": "^4.4.6",
     "prettier": "^2.7.1",
-    "rxjs": "^7.5.5",
+    "rxjs": "^7.5.6",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
@@ -53,8 +53,8 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "neo4j-driver": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0"
