--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nhogs/nestjs-neo4j",
-  "version": "0.5.4",
+  "version": "0.5.5",
   "engines": {
     "node": ">=16.x"
   },
@@ -27,35 +27,35 @@
   },
   "homepage": "https://github.com/Nhogs/nestjs-neo4j#readme",
   "devDependencies": {
-    "@nestjs/common": "^9.0.3",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.3",
-    "@nestjs/testing": "^9.0.3",
-    "@types/jest": "^28.1.5",
-    "@types/node": "^18.0.3",
+    "@nestjs/core": "^9.0.11",
+    "@nestjs/platform-express": "^9.0.11",
+    "@nestjs/testing": "^9.0.11",
+    "@types/jest": "^29.0.2",
+    "@types/node": "^18.7.18",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "axios": "^0.27.2",
-    "eslint": "^8.19.0",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.2",
-    "neo4j-driver": "^4.4.6",
+    "jest": "^29.0.3",
+    "neo4j-driver": "^5.0.1",
     "prettier": "^2.7.1",
     "rxjs": "^7.5.6",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.5",
+    "ts-jest": "^29.0.1",
     "ts-loader": "^9.3.1",
-    "ts-node": "^10.8.2",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.3"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "neo4j-driver": "^4.0.0",
+    "neo4j-driver": "^4.0.0 || ^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0"
   },
