--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,19 @@ version: '3.8'
 
 services:
   neo4j:
-    image: neo4j:4.4.11-enterprise
+    image: neo4j:5.2.0-enterprise
     restart: unless-stopped
     ports:
       - "7474:7474"
       - "7687:7687"
-    volumes:
-      - ./.neo4j/conf:/conf
-      - ./.neo4j/data:/data
-      - ./.neo4j/import:/import
-      - ./.neo4j/logs:/logs
-      - ./.neo4j/plugins:/plugins
     environment:
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
       - NEO4J_AUTH=neo4j/test
       # Raise memory limits
-      - NEO4J_dbms_memory_pagecache_size=1G
-      - NEO4J_dbms.memory.heap.initial_size=1G
-      - NEO4J_dbms_memory_heap_max__size=1G
-      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_server_memory_pagecache_size=1G
+      - NEO4J_server.memory.heap.initial_size=1G
+      - NEO4J_server_memory_heap_max__size=1G
+      - NEO4J_PLUGINS=["apoc"]
     healthcheck:
       test: wget http://localhost:7474 || exit 1
       interval: 1s
