change busybox docker image to 'busybox:stable'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       start_period: 40s
 
   busybox:
-    image: 'busybox'
+    image: 'busybox:stable'
     depends_on:
       neo4j:
         condition: service_healthy
