--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "7687:7687"
     environment:
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
-      - NEO4J_AUTH=neo4j/test
+      - NEO4J_AUTH=neo4j/test_password
       # Raise memory limits
       - NEO4J_server_memory_pagecache_size=1G
       - NEO4J_server.memory.heap.initial_size=1G
@@ -22,8 +22,8 @@ services:
       retries: 20
       start_period: 40s
 
-  busybox:
-    image: 'busybox:stable'
+  hello-word:
+    image: 'hello-world'
     depends_on:
       neo4j:
         condition: service_healthy
