--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nhogs/nestjs-neo4j",
-  "version": "0.5.12",
+  "version": "0.5.13",
   "engines": {
     "node": ">=16.x"
   },
@@ -27,33 +27,33 @@
   },
   "homepage": "https://github.com/Nhogs/nestjs-neo4j#readme",
   "devDependencies": {
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/testing": "^9.4.0",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.1.4",
+    "@nestjs/common": "^10.0.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/testing": "^10.0.3",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "eslint": "^8.40.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
-    "neo4j-driver": "^5.8.0",
+    "neo4j-driver": "^5.9.2",
     "prettier": "^2.8.8",
     "rxjs": "^7.8.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0|| ^10.0.0",
     "neo4j-driver": "^4.0.0 || ^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0"
