--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nhogs/nestjs-neo4j",
-  "version": "0.5.15",
+  "version": "0.5.16",
   "engines": {
     "node": ">=18.x"
   },
@@ -27,36 +27,36 @@
   },
   "homepage": "https://github.com/Nhogs/nestjs-neo4j#readme",
   "devDependencies": {
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.8",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/testing": "^10.3.8",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/testing": "^10.4.1",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
+    "@types/node": "^22.4.1",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "neo4j-driver": "^5.19.0",
-    "prettier": "^3.2.5",
+    "neo4j-driver": "^5.23.0",
+    "prettier": "^3.3.3",
     "rxjs": "^7.8.1",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
-    "@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0|| ^10.0.0",
-    "neo4j-driver": "^4.0.0 || ^5.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0"
+    "@nestjs/common": ">=7.0.0 <11.0.0",
+    "@nestjs/core": ">=7.0.0 <11.0.0",
+    "neo4j-driver": ">=4.0.0 <6.0.0",
+    "reflect-metadata": ">=0.1.13 <1.0.0",
+    "rxjs": ">=7.0.0 <8.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
