--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^29.7.0",
     "neo4j-driver": "^5.23.0",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.4",
